Fixed wizard breadcrumbs alignment, this was hard to get right O_O

--- a/src/styles/views/_wizard.scss
+++ b/src/styles/views/_wizard.scss
@@ -3,12 +3,13 @@ $complete-color: $primary-color;
 $active-color: $font-color-normal;
 $invalid-color: yellow;
 
-.wizard-status-bar {
+#wizard-status-bar {
     margin: 0 (-5%);
     padding: 0.5em 5%;
     background: white;
     @include box-shadow(0px 1px 4px rgba(#333, 0.1));
     @include box-sizing(content-box);
+    line-height: 2em;
 }
 
 #wizard-step {
@@ -16,53 +17,93 @@ $invalid-color: yellow;
 }
 
 #wizard-step-list {
-    text-align: center;
     clear: both;
     overflow: hidden;
-    margin-top: 1em;
-    line-height: 1em;
+    line-height: 3em;
+    margin: 0 4%;
+    position: relative;
 
     .wizard-step-list-item {
         float: left;
         font-size: 70%;
-        position: relative;
         color: $font-color-light;
         font-weight: normal;
+        text-align: center;
 
-        &:before {
+        &:first-child {
+            text-align: left;
+        }
+
+        &:last-child {
+            text-align: right;
+
+            .separator {
+                display: none;
+            }
+        }
+
+        .step {
+            display: inline;
+
+            .title {
+                margin-left: 1.2em;
+            }
+
+            i {
+                position: absolute;
+                margin-top: 1px;
+            }
+
+            .index {
+                position: absolute;
+            }
+        }
+
+        .separator {
+            text-align: center;
             opacity: 0.4;
-            content: '· · ·';
             display: inline;
             position: absolute;
-            text-align: center;
-            width: 100%;
-            left: 50%;
-            top: 0;
             font-weight: 700;
-            // color: $font-color-light;
+            top: 0;
+            bottom: 0;
+            // Alignment is adjusted via javascript. See `wizard-view.coffee` in
+            // `App.Views.WizardStepList::adjustSeparatorWidth`.
+
+            &:after {
+                content: '· · ·';
+            }
         }
 
         &.active {
             color: $active-color;
 
-            &:after {
-                content: '▲';
-                display: block;
-                color: white;
-                font-size: 20px;
+            .step {
                 position: relative;
-                z-index: 999;
-                bottom: -5px;
-                @include text-shadow(0px -1px 1px rgba(black, 0.1));
-                // border-left: 5px solid transparent;
-                // border-right: 5px solid transparent;
-                // border-bottom: 8px solid white;
-                // height: 0;
-                // width: 0;
-                // position: relative;
-                // left: 50%;
-                // @include box-shadow(0px -1px 1px rgba(black, 0.2));
+
+                &:before {
+                    text-align: center;
+                    content: '▲';
+                    display: block;
+                    color: white;
+                    font-size: 20px;
+                    position: absolute;
+                    bottom: 0;
+                    top: 4px;
+                    width: 100%;
+                    @include text-shadow(0px -1px 1px rgba(black, 0.1));
+                    // border-left: 5px solid transparent;
+                    // border-right: 5px solid transparent;
+                    // border-bottom: 8px solid white;
+                    // height: 0;
+                    // width: 0;
+                    // position: relative;
+                    // left: 50%;
+                    // @include box-shadow(0px -1px 1px rgba(black, 0.2));
+                }
             }
+
+
         }
 
         &.complete {
@@ -71,23 +112,6 @@ $invalid-color: yellow;
 
         &.invalid {
             color: $invalid-color;
-        }
-
-        i {
-            position: relative;
-            top: 0.1em;
-            left: -0.3em;
-        }
-
-        .index {
-            position: relative;
-            margin-right: 0.4em;
-        }
-
-        &:last-child {
-            &:before {
-                display: none !important;
-            }
         }
     }
 }
